# arcpy-orchestration

./: .bumpversion.cfg  .gitignore  Makefile  README.md  environment.yml  make.cmd  make.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: arcpy.instructions.md  crs.instructions.md  logging.instructions.md  markdown.instructions.md  notebooks.instructions.md  python-style.instructions.md  sql.instructions.md  testing.instructions.md
.github/workflows/: make-mkdocs.yml
arcgis/: README.md  arcpy-orchestration.aprx  arcpy_orchestration.pyt
arcgis/styles/: Firefly.stylx  GlassyNorthArrows.stylx  PaperCut.stylx  PenAndInk.stylx  PhysicalGeographyAtlas.stylx  Sketch.stylx
config/: config.yml
dagster_home/: dagster.yml  workspace.yml
docsrc/: mkdocs.yml
docsrc/mkdocs/: 01_install_and_configure_iis.md  api.md  configuration.md  cookiecutter_reference.md  dagster_setup_instructions.md  index.md  plombery_logging_integration.md  plombery_setup_instructions.md  setup.md  setup_instructions.md  why_this_approach.md
docsrc/mkdocs/Copilot_Research/: overview_01.md  overview_02.md  overview_03.md  overview_04.md
docsrc/mkdocs/In_Depth_Topics/: plombery_logging_integration.md
docsrc/mkdocs/notes/: 01_install_and_configure_iis.md  02_install_servy.md
scripts/: dagster_definitions.py  make_data.py  make_pyt_archive.py  plombery_orchestrator.py  setup_dagster.ps1  setup_data.py
src/arcpy_orchestration/: __init__.py  _main.py  config.py  park_access.py
src/arcpy_orchestration/sql/: __init__.py  example.sql
src/arcpy_orchestration/utils/: __init__.py  _data.py  _logging.py  _main_utils.py
testing/: conftest.py  test_arcpy_orchestration.py
