[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "arcpy-orchestration"

version = "0.1.0"

authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]

description = "Web-based Python script orchestration with access to an ArcPy environment through ArcGIS Pro."

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
]


license = {text = "Apache-2.0"}


dependencies = [
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "black>=21",
    "bump2version",
]
mkdocs = [
    "mkdocs",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]>=0.18",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arcpy_orchestration*"]

[tool.setuptools.package-data]
"arcpy_orchestration.sql" = ["*.sql"]
